--- a/custom-php.ini
+++ b/custom-php.ini
@@ -1,5 +1,6 @@
-upload_max_filesize = 2G
-post_max_size = 2G
-memory_limit = 2G
-max_execution_time = 600
-max_input_time = 600
+upload_max_filesize = 20G
+post_max_size = 20G
+memory_limit = 20G
+max_execution_time = 6000
+max_input_time = 6000
+session.gc_maxlifetime = 1440
