--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: '3.8'
-
 services:
   wordpress:
-    image: wordpress:latest
+    image: wordpress:latest  # Replace with a valid tag (e.g., `6.5` or `php8.2`)
     restart: always
     ports:
       - "8082:80"
@@ -12,11 +10,12 @@ services:
       WORDPRESS_DB_PASSWORD: password
       WORDPRESS_DB_NAME: wordpress
     volumes:
-      - wordpress_data:/var/www/html
+      - ./wp-project/wp-content:/var/www/html/wp-content
       - ./custom-php.ini:/usr/local/etc/php/conf.d/custom-php.ini
 
   db:
-    image: mysql:latest
+    image: mysql:5.7
+    platform: linux/amd64  # Force AMD64 emulation on ARM64
     restart: always
     environment:
       MYSQL_DATABASE: wordpress
@@ -34,7 +33,8 @@ services:
     environment:
       PMA_HOST: db
       MYSQL_ROOT_PASSWORD: rootpassword
+    volumes:
+      - ./custom-php.ini:/usr/local/etc/php/conf.d/custom-php.ini
 
 volumes:
-  wordpress_data:
   db_data:
